<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg"
    tools:context=".activity.SelectLanguageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/icn_backarrow" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_20sdp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/icn_language" />

                <com.dnk.dreamchildparenting.Custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/txtchooseLanguage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_21sdp"
                    app:CustomTextviewFont="@string/textbold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/languageList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.dnk.dreamchildparenting.Custom.CustomTextView
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/lite_blue_button"
                    android:gravity="center"
                    android:text="@string/txtcontinue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:CustomTextviewFont="@string/textsemibold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>