<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".activity.DailyActivity">

    <RelativeLayout
        android:id="@+id/loutActionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/icn_backarrow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <com.dnk.dreamchildparenting.Custom.CustomTextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/txtNotificationTitle"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp"
                app:CustomTextviewFont="@string/textbold" />

            <com.dnk.dreamchildparenting.Custom.CustomTextView
                android:id="@+id/txtCounter"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/redcircle"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:CustomTextviewFont="@string/textsemimedium" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>