<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg"
    tools:context=".activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/icn_backarrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBack"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/icn_forgot_password" />

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_vertical"
            android:text="Enter Password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp"
            app:CustomTextviewFont="@string/textbold" />


        <com.dnk.dreamchildparenting.Custom.CustomEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/login_edittext_bg"
            android:gravity="center_vertical"
            android:hint="********"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:text="12345"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14sdp"
            app:CustomEditTextFont="@string/textsemimedium" />


        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/lite_blue_button"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:CustomTextviewFont="@string/textsemibold" />
    </LinearLayout>
</RelativeLayout>