<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bg"
    tools:context=".activity.ForgotPasswordActivity">
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/icn_backarrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:layout_below="@id/btnBack"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/icn_forgot_password"/>

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center_vertical"
            android:text="Forgot Your Password?"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp"
            app:CustomTextviewFont="@string/textbold" />
        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:text="Please enter your mobile number to receive a verification code."
            android:textColor="@color/c_8d95a1"
            android:textSize="@dimen/_12sdp"
            app:CustomTextviewFont="@string/textsemimedium" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/login_edittext_bg"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/loutSelectContry"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.dnk.dreamchildparenting.Custom.CustomTextView
                    android:id="@+id/txtCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="+91"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14sdp"
                    app:CustomTextviewFont="@string/textsemimedium" />

                <ImageView
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/icn_down" />
            </RelativeLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/c_EDEBEB" />

            <com.dnk.dreamchildparenting.Custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/txtMobileNumber"
                android:inputType="number"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:singleLine="true"
                android:text="7737717711"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                app:CustomEditTextFont="@string/textsemimedium" />

        </LinearLayout>

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/lite_blue_button"
            android:gravity="center"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:CustomTextviewFont="@string/textsemibold" />
    </LinearLayout>
</RelativeLayout>