<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/loutData"
        android:layout_width="@dimen/_115sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edittext_bg"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_5sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample"
            app:riv_border_width="0dp"
            app:riv_corner_radius="@dimen/_5sdp" />

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Booming Bathtub"
            android:textColor="@color/c_8d95a1"
            android:textSize="@dimen/_10sdp"
            app:CustomTextviewFont="@string/textsemimedium" />

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:id="@+id/txtPlanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Rs. 2000"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="@dimen/_12sdp"
            app:CustomTextviewFont="@string/textsemibold" />

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/change_address_btn_bg"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_11sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="+ Add"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="@dimen/_11sdp"
            app:CustomTextviewFont="@string/textbold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loutViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_toRightOf="@+id/loutData"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/colorPrimaryVariant"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/icn_right_arrow"
            app:tint="@color/colorPrimary" />

        <com.dnk.dreamchildparenting.Custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="VIEW ALL"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="@dimen/_10sdp"
            app:CustomTextviewFont="@string/textsemimedium" />

    </LinearLayout>
</RelativeLayout>